// Protocol Buffers v3
syntax = "proto3";

package service;

option go_package = "github.com/oaxley/mlserver/registry/service";


// message sent by clients to register a new model
message ServiceDefinition {
    string model_name = 1;          // name of the model
    string model_version = 2;       // version of the model
    string hostname = 3;            // hostname where the model is running
    uint32 port = 4;                // port where the model is running
}

// response to service creation
message Response {
    string message = 1;
}

// message sent by clients to query for a service
message QueryService {
    string model_name = 1;
    string model_version = 2;
}

// new registry service
service RegistryService {
    // register a new model
    rpc SetService(ServiceDefinition) returns (Response) {}

    // query for a service
    rpc GetService(QueryService) returns (ServiceDefinition) {}
}
